err/uranium.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appdirs-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/coloredlogs'...
Listing './lib/python3.5/site-packages/coloredlogs-6.1.dist-info'...
Listing './lib/python3.5/site-packages/deepmerge'...
Listing './lib/python3.5/site-packages/deepmerge/strategy'...
Compiling './lib/python3.5/site-packages/deepmerge/strategy/test_core.py'...
***   File "./lib/python3.5/site-packages/deepmerge/strategy/test_core.py", line 1
    def test_strategy_handles_single_function():
                                               ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/deepmerge/tests'...
Listing './lib/python3.5/site-packages/deepmerge/tests/strategy'...
Listing './lib/python3.5/site-packages/deepmerge-0.0.3.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/humanfriendly'...
Listing './lib/python3.5/site-packages/humanfriendly-4.6.dist-info'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-16.8.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/idna'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.13.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools-35.0.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/decorators'...
Listing './lib/python3.5/site-packages/tests/lib'...
Listing './lib/python3.5/site-packages/tests/packages'...
Listing './lib/python3.5/site-packages/tests/rules'...
Listing './lib/python3.5/site-packages/tests/tasks'...
Listing './lib/python3.5/site-packages/uranium'...
Listing './lib/python3.5/site-packages/uranium/lib'...
Listing './lib/python3.5/site-packages/uranium/lib/compat'...
Listing './lib/python3.5/site-packages/uranium/lib/sandbox'...
Listing './lib/python3.5/site-packages/uranium/lib/sandbox/venv'...
Listing './lib/python3.5/site-packages/uranium/packages'...
Listing './lib/python3.5/site-packages/uranium/rules'...
Listing './lib/python3.5/site-packages/uranium/scripts'...
Listing './lib/python3.5/site-packages/uranium-1.5.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_support'...
Listing './share'...
Listing './share/python-wheels'...
